Revise Rust guide.